<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:outlineSpotShadowColor="@android:color/transparent"
            card_view:cardElevation="0dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"
            card_view:targetApi="28">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/themeToggleGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:checkedButton="@id/systemThemeButton"
                    app:singleSelection="true"
                    app:selectionRequired="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/lightThemeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/light"
                        app:tooltipText="@string/light_theme"
                        android:contentDescription="@string/light_theme"
                        style="@style/Widget.Material3.Button.IconButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/darkThemeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/dark"
                        app:tooltipText="@string/dark_theme"
                        android:contentDescription="@string/dark_theme"
                        style="@style/Widget.Material3.Button.IconButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/blackThemeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/black"
                        app:tooltipText="@string/black_theme"
                        android:contentDescription="@string/black_theme"
                        style="@style/Widget.Material3.Button.IconButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/systemThemeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/system_theme"
                        app:tooltipText="@string/system_theme"
                        android:contentDescription="@string/system_theme"
                        style="@style/Widget.Material3.Button.IconButton"/>

                </com.google.android.material.button.MaterialButtonToggleGroup>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/logToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/enable_logs" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <!--        <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/ask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/ask" />!-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_menu"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Select Item"
            card_view:ignore="HardcodedText">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:singleLine="false"
                android:lines="2"
                android:maxLines="3"
                card_view:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/showDialogToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/show_dialog" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/selectSplitsForDeviceToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/automatically_select" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/signToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/sign_apk" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/forceToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/force" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/updateToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/auto_update" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkUpdateNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_update_now"
            style="@style/Widget.Material3.Button.OutlinedButton" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/langPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            style="@style/Widget.Material3.Button.OutlinedButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/suffixLayout"
            android:layout_height="wrap_content"
            android:hint="@string/suffix"
            app:endIconMode="clear_text"
            app:boxBackgroundMode="outline"
            android:layout_marginTop="5dp"
            app:boxCornerRadiusTopStart="24dp"
            app:boxCornerRadiusTopEnd="24dp"
            app:boxCornerRadiusBottomStart="24dp"
            app:boxCornerRadiusBottomEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/filter_button"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/suffixInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>